--- a/environment.yml
+++ b/environment.yml
@@ -1,95 +1,264 @@
-name: base
+name: rstudio
 channels:
-  - moj-analytical-services
   - conda-forge
   - r
-  - bioconda
+  - moj-analytical-services
   - defaults
 dependencies:
-  - _r-mutex=1.0.0=anacondar_1
-  - asn1crypto=0.24.0=py37_0
-  - binutils_impl_linux-64=2.28.1=had2808c_3
-  - binutils_linux-64=7.2.0=had2808c_27
-  - bwidget=1.9.11=1
-  - bzip2=1.0.6=h14c3975_5
-  - ca-certificates=2019.1.23=0
-  - cairo=1.14.12=h8948797_3
-  - certifi=2019.3.9=py37_0
-  - cffi=1.11.5=py37he75722e_1
-  - chardet=3.0.4=py37_1
-  - conda=4.6.8=py37_0
-  - conda-env=2.6.0=1
-  - cryptography=2.4.2=py37h1ba5d50_0
-  - curl=7.63.0=hbc83047_1000
-  - fontconfig=2.13.0=h9420a91_0
-  - freetype=2.9.1=h8a8886c_1
-  - fribidi=1.0.5=h7b6447c_0
-  - gcc_impl_linux-64=7.2.0=habb00fd_3
-  - gcc_linux-64=7.2.0=h550dcbe_27
-  - gfortran_impl_linux-64=7.2.0=hdf63c60_3
-  - gfortran_linux-64=7.2.0=h550dcbe_27
-  - glib=2.56.2=hd408876_0
-  - graphite2=1.3.13=h23475e2_0
-  - gsl=2.4=h14c3975_4
-  - gxx_impl_linux-64=7.2.0=hdf63c60_3
-  - gxx_linux-64=7.2.0=h550dcbe_27
+  - _libgcc_mutex=0.1=main
+  - _r-mutex=1.0.1=anacondar_1
+  - altair=4.1.0=py_1
+  - asn1crypto=1.3.0=py37_0
+  - attrs=19.3.0=py_0
+  - binutils_impl_linux-64=2.33.1=he6710b0_7
+  - binutils_linux-64=2.33.1=h9595d00_17
+  - boto3=1.13.3=pyh9f0ad1d_0
+  - botocore=1.16.3=pyh9f0ad1d_0
+  - bwidget=1.9.14=0
+  - bzip2=1.0.8=h516909a_2
+  - ca-certificates=2020.12.5=ha878542_0
+  - cairo=1.14.12=h80bd089_1005
+  - certifi=2020.12.5=py37h89c1867_1
+  - cffi=1.14.0=py37h2e261b9_0
+  - chardet=3.0.4=py37_1003
+  - conda-package-handling=1.6.0=py37h7b6447c_0
+  - cryptography=2.8=py37h1ba5d50_0
+  - curl=7.68.0=hf8cf82a_0
+  - decorator=4.4.2=py_0
+  - docutils=0.15.2=py37_0
+  - entrypoints=0.3=py37hc8dfbb8_1001
+  - fontconfig=2.13.1=he4413a7_1000
+  - freetype=2.10.1=he06d7ca_0
+  - gcc_impl_linux-64=7.3.0=habb00fd_1
+  - gcc_linux-64=7.3.0=h553295d_17
+  - gettext=0.19.8.1=hc5be6a0_1002
+  - gfortran_impl_linux-64=7.3.0=hdf63c60_5
+  - gfortran_linux-64=7.3.0=h553295d_17
+  - giflib=5.2.1=h516909a_2
+  - glib=2.56.2=had28632_1001
+  - graphite2=1.3.13=he1b5a44_1001
+  - gxx_impl_linux-64=7.3.0=hdf63c60_1
+  - gxx_linux-64=7.3.0=h553295d_17
   - harfbuzz=1.8.8=hffaf4a1_0
-  - icu=58.2=h9c2bf20_1
+  - icu=58.2=hf484d3e_1000
   - idna=2.8=py37_0
-  - jpeg=9b=h024ee3a_2
-  - krb5=1.16.1=h173b8e3_7
-  - libcurl=7.63.0=h20c2e04_1000
-  - libedit=3.1.20170329=h6b74fdf_2
+  - importlib-metadata=1.6.0=py37hc8dfbb8_0
+  - importlib_metadata=1.6.0=0
+  - ipython_genutils=0.2.0=py_1
+  - jinja2=2.11.2=pyh9f0ad1d_0
+  - jmespath=0.9.5=py_0
+  - jpeg=9c=h14c3975_1001
+  - jsonschema=3.2.0=py37hc8dfbb8_1
+  - jupyter_core=4.6.3=py37hc8dfbb8_1
+  - krb5=1.16.4=h173b8e3_0
+  - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libblas=3.8.0=14_openblas
+  - libcblas=3.8.0=14_openblas
+  - libcurl=7.68.0=hda55be3_0
+  - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=8.2.0=hdf63c60_1
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.36=hbc83047_0
-  - libssh2=1.8.0=h1ba5d50_4
-  - libstdcxx-ng=8.2.0=hdf63c60_1
-  - libtiff=4.0.10=h2733197_2
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.9=he19cac6_0
-  - make=4.2.1=h1bed415_1
-  - ncurses=6.1=he6710b0_1
-  - openssl=1.1.1b=h7b6447c_1
-  - pango=1.42.4=h049681c_0
-  - pcre=8.42=h439df22_0
-  - pip=18.1=py37_0
-  - pixman=0.36.0=h7b6447c_0
-  - pycosat=0.6.3=py37h14c3975_0
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_5
+  - libiconv=1.15=h516909a_1006
+  - libjpeg-turbo=2.0.3=h516909a_1
+  - liblapack=3.8.0=14_openblas
+  - libopenblas=0.3.7=h5ec1e0e_6
+  - libpng=1.6.37=hed695b0_1
+  - libssh2=1.8.2=h22169c7_2
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libtiff=4.1.0=hc7e4089_6
+  - libuuid=2.32.1=h14c3975_1000
+  - libwebp-base=1.1.0=h516909a_3
+  - libxcb=1.13=h14c3975_1002
+  - libxml2=2.9.9=hea5a465_1
+  - lz4-c=1.8.3=he1b5a44_1001
+  - make=4.3=h516909a_0
+  - markupsafe=1.1.1=py37h8f50634_1
+  - nbformat=5.0.6=py_0
+  - nbstripout=0.3.7=py_0
+  - ncurses=6.2=he6710b0_0
+  - nodejs=12.4.0=he1b5a44_0
+  - numpy=1.18.4=py37h8960a57_0
+  - openssl=1.1.1g=h516909a_0
+  - pandas=1.0.3=py37h0da4684_1
+  - pandoc=2.9.2.1=0
+  - pango=1.40.14=he752989_2
+  - pcre=8.44=he1b5a44_0
+  - pip=20.0.2=py37_1
+  - pixman=0.34.0=h14c3975_1003
+  - pthread-stubs=0.4=h14c3975_1001
+  - pycosat=0.6.3=py37h7b6447c_0
   - pycparser=2.19=py37_0
-  - pyopenssl=18.0.0=py37_0
-  - pysocks=1.6.8=py37_0
-  - python=3.7.2=h0371630_0
-  - r-base=3.5.1=h1e0a451_2
-  - r-bh=1.66.0_1=r351h6115d3f_0
-  - r-crayon=1.3.4=r351h6115d3f_0
-  - r-digest=0.6.15=r351h96ca727_0
-  - r-htmltools=0.3.6=r351h29659fb_0
-  - r-httpuv=1.4.5=r351h29659fb_0
-  - r-jsonlite=1.5=r351h96ca727_0
-  - r-later=0.7.3=r351h29659fb_0
-  - r-magrittr=1.5=r351h6115d3f_4
-  - r-mime=0.5=r351h96ca727_0
-  - r-promises=1.0.1=r351h29659fb_0
-  - r-r6=2.2.2=r351h6115d3f_0
-  - r-rcpp=0.12.18=r351h29659fb_0
-  - r-rlang=0.2.1=r351h96ca727_0
-  - r-shiny=1.1.0=r351h6115d3f_0
-  - r-sourcetools=0.1.7=r351h29659fb_0
-  - r-xtable=1.8_2=r351h6115d3f_0
+  - pyopenssl=19.1.0=py37_0
+  - pyrsistent=0.16.0=py37h8f50634_0
+  - pysocks=1.7.1=py37_0
+  - python=3.7.6=h0371630_2
+  - python-dateutil=2.8.1=py_0
+  - python_abi=3.7=1_cp37m
+  - pytz=2020.1=pyh9f0ad1d_0
+  - r-askpass=1.1=r35hcdcec82_1
+  - r-assertthat=0.2.1=r35h6115d3f_1
+  - r-aws.ec2metadata=0.2.0=r35h6115d3f_0
+  - r-aws.s3=0.3.21=r35h6115d3f_0
+  - r-aws.signature=0.5.2=r35h6115d3f_0
+  - r-backports=1.1.6=r35hcdcec82_1
+  - r-base=3.5.1=he45234b_1004
+  - r-base64enc=0.1_3=r35hcdcec82_1003
+  - r-bitops=1.0_6=r35hcdcec82_1003
+  - r-brew=1.0_6=r35h6115d3f_1002
+  - r-broom=0.5.6=r35h6115d3f_0
+  - r-callr=3.4.3=r35h6115d3f_0
+  - r-catools=1.17.1.4=r35h0357c0b_0
+  - r-cellranger=1.1.0=r35h6115d3f_1002
+  - r-cli=2.0.2=r35h6115d3f_0
+  - r-clipr=0.7.0=r35h6115d3f_0
+  - r-codetools=0.2_16=r35h6115d3f_1001
+  - r-colorspace=1.4_1=r35hcdcec82_1
+  - r-commonmark=1.7=r35hcdcec82_1001
+  - r-covr=3.5.0=r35h0357c0b_0
+  - r-crayon=1.3.4=r35h6115d3f_1002
+  - r-crosstalk=1.1.0.1=r35h6115d3f_0
+  - r-curl=4.3=r35hcdcec82_0
+  - r-dbi=1.1.0=r35h6115d3f_0
+  - r-dbplyr=1.4.3=r35h6115d3f_0
+  - r-desc=1.2.0=r35h6115d3f_1002
+  - r-devtools=2.3.0=r35h6115d3f_0
+  - r-digest=0.6.25=r35h0357c0b_1
+  - r-dplyr=0.8.5=r35h0357c0b_0
+  - r-dt=0.13=r35h6115d3f_0
+  - r-ellipsis=0.3.0=r35hcdcec82_0
+  - r-evaluate=0.14=r35h6115d3f_1
+  - r-fansi=0.4.1=r35hcdcec82_0
+  - r-farver=2.0.3=r35h0357c0b_0
+  - r-fastmap=1.0.1=r35h0357c0b_0
+  - r-forcats=0.5.0=r35h6115d3f_0
+  - r-formatr=1.7=r35h6115d3f_1
+  - r-fs=1.4.1=r35h0357c0b_0
+  - r-generics=0.0.2=r35h6115d3f_1002
+  - r-ggplot2=3.3.0=r35h6115d3f_0
+  - r-gh=1.1.0=r35h6115d3f_0
+  - r-git2r=0.26.1=r35h7253d3a_1
+  - r-glue=1.4.0=r35hcdcec82_0
+  - r-gtable=0.3.0=r35h6115d3f_2
+  - r-haven=2.2.0=r35hde08347_0
+  - r-highr=0.8=r35h6115d3f_1
+  - r-hms=0.5.3=r35h6115d3f_0
+  - r-htmltools=0.4.0=r35h0357c0b_0
+  - r-htmlwidgets=1.5.1=r35h6115d3f_0
+  - r-httpuv=1.5.2=r35h0357c0b_1
+  - r-httr=1.4.1=r35h6115d3f_1
+  - r-ini=0.3.1=r35h6115d3f_1002
+  - r-isoband=0.2.1=r35h0357c0b_0
+  - r-jsonlite=1.6.1=r35hcdcec82_0
+  - r-knitr=1.28=r35h6115d3f_0
+  - r-labeling=0.3=r35h6115d3f_1002
+  - r-later=1.0.0=r35h0357c0b_0
+  - r-lattice=0.20_41=r35hcdcec82_1
+  - r-lazyeval=0.2.2=r35hcdcec82_1
+  - r-lifecycle=0.2.0=r35h6115d3f_0
+  - r-lubridate=1.7.8=r35h0357c0b_0
+  - r-magrittr=1.5=r35h6115d3f_1002
+  - r-markdown=1.1=r35hcdcec82_0
+  - r-mass=7.3_51.6=r35hcdcec82_1
+  - r-matrix=1.2_18=r35h7fa42b6_2
+  - r-memoise=1.1.0=r35h6115d3f_1003
+  - r-mgcv=1.8_31=r35h7fa42b6_0
+  - r-mime=0.9=r35hcdcec82_0
+  - r-modelr=0.1.7=r35h6115d3f_0
+  - r-munsell=0.5.0=r35h6115d3f_1002
+  - r-nlme=3.1_147=r35h9bbef5b_0
+  - r-openssl=1.4.1=r35he5c4762_0
+  - r-packrat=0.5.0=r35h6115d3f_1001
+  - r-pillar=1.4.3=r35h6115d3f_0
+  - r-pkgbuild=1.0.7=r35h6115d3f_0
+  - r-pkgconfig=2.0.3=r35h6115d3f_0
+  - r-pkgload=1.0.2=r35h0357c0b_1001
+  - r-plogr=0.2.0=r35h6115d3f_1002
+  - r-plyr=1.8.6=r35h0357c0b_0
+  - r-praise=1.0.0=r35h6115d3f_1003
+  - r-prettyunits=1.1.1=r35h6115d3f_0
+  - r-processx=3.4.2=r35hcdcec82_0
+  - r-progress=1.2.2=r35h6115d3f_1
+  - r-promises=1.1.0=r35h0357c0b_0
+  - r-ps=1.3.2=r35hcdcec82_0
+  - r-purrr=0.3.4=r35hcdcec82_0
+  - r-r6=2.4.1=r35h6115d3f_0
+  - r-rappdirs=0.3.1=r35hcdcec82_1003
+  - r-rcmdcheck=1.3.3=r35h6115d3f_2
+  - r-rcolorbrewer=1.1_2=r35h6115d3f_1002
+  - r-rcpp=1.0.4.6=r35h0357c0b_0
+  - r-readr=1.3.1=r35h0357c0b_1002
+  - r-readxl=1.3.1=r35hde08347_3
+  - r-rematch=1.0.1=r35h6115d3f_1002
+  - r-rematch2=2.1.2=r35h6115d3f_0
+  - r-remotes=2.1.1=r35h6115d3f_0
+  - r-reprex=0.3.0=r35h6115d3f_1
+  - r-reshape2=1.4.4=r35h0357c0b_0
+  - r-reticulate=1.15=r35h0357c0b_0
+  - r-rex=1.2.0=r35h6115d3f_0
+  - r-rlang=0.4.5=r35hcdcec82_2
+  - r-rmarkdown=2.1=r35h6115d3f_0
+  - r-roxygen2=7.1.0=r35h0357c0b_0
+  - r-rprojroot=1.3_2=r35h6115d3f_1002
+  - r-rstudioapi=0.11=r35h6115d3f_0
+  - r-rversions=2.0.1=r35h6115d3f_0
+  - r-rvest=0.3.5=r35h6115d3f_0
+  - r-s3tools=0.0.9=r351_0
+  - r-scales=1.1.0=r35h6115d3f_0
+  - r-selectr=0.4_2=r35h6115d3f_0
+  - r-sessioninfo=1.1.1=r35h6115d3f_1001
+  - r-shiny=1.4.0.2=r35h6115d3f_0
+  - r-sourcetools=0.1.7=r35he1b5a44_1001
+  - r-stringi=1.4.3=r35h0357c0b_2
+  - r-stringr=1.4.0=r35h6115d3f_1
+  - r-sys=3.3=r35hcdcec82_0
+  - r-testthat=2.3.2=r35h0357c0b_0
+  - r-tibble=3.0.1=r35hcdcec82_0
+  - r-tidyr=1.0.2=r35h0357c0b_0
+  - r-tidyselect=1.0.0=r35h6115d3f_0
+  - r-tidyverse=1.3.0=r35h6115d3f_1
+  - r-tinytex=0.22=r35h6115d3f_0
+  - r-usethis=1.6.1=r35h6115d3f_0
+  - r-utf8=1.1.4=r35hcdcec82_1002
+  - r-vctrs=0.2.4=r35hcdcec82_0
+  - r-viridislite=0.3.0=r35h6115d3f_1002
+  - r-webshot=0.5.2=r35h6115d3f_0
+  - r-whisker=0.4=r35h6115d3f_0
+  - r-withr=2.2.0=r35h6115d3f_0
+  - r-xfun=0.13=r35h6115d3f_0
+  - r-xml2=1.3.2=r35h0357c0b_0
+  - r-xopen=1.0.0=r35h6115d3f_1002
+  - r-xtable=1.8_4=r35h6115d3f_2
+  - r-yaml=2.2.1=r35hcdcec82_0
+  - r-zeallot=0.1.0=r35h6115d3f_1001
   - readline=7.0=h7b6447c_5
-  - requests=2.21.0=py37_0
-  - ruamel_yaml=0.15.46=py37h14c3975_0
-  - setuptools=40.6.3=py37_0
-  - six=1.12.0=py37_0
-  - sqlite=3.26.0=h7b6447c_0
+  - requests=2.22.0=py37_1
+  - ruamel_yaml=0.15.87=py37h7b6447c_0
+  - s3transfer=0.3.3=py37hc8dfbb8_1
+  - setuptools=45.2.0=py37_0
+  - six=1.14.0=py37_0
+  - sqlite=3.31.1=h7b6447c_0
   - tk=8.6.8=hbc83047_0
   - tktable=2.10=h14c3975_0
-  - urllib3=1.24.1=py37_0
-  - wheel=0.32.3=py37_0
+  - toolz=0.10.0=py_0
+  - tqdm=4.42.1=py_0
+  - traitlets=4.3.3=py37hc8dfbb8_1
+  - urllib3=1.25.8=py37_0
+  - wheel=0.34.2=py37_0
+  - xorg-kbproto=1.0.7=h14c3975_1002
+  - xorg-libice=1.0.10=h516909a_0
+  - xorg-libsm=1.2.3=h84519dc_1000
+  - xorg-libx11=1.6.9=h516909a_0
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xorg-libxext=1.3.4=h516909a_0
+  - xorg-libxrender=0.9.10=h516909a_1002
+  - xorg-renderproto=0.11.1=h14c3975_1002
+  - xorg-xextproto=7.3.0=h14c3975_1002
+  - xorg-xproto=7.0.31=h14c3975_1007
   - xz=5.2.4=h14c3975_4
   - yaml=0.1.7=had09818_2
+  - zipp=3.1.0=py_0
   - zlib=1.2.11=h7b6447c_3
-  - zstd=1.3.7=h0b5b093_0
+  - zstd=1.4.4=h3b9ef0a_2
+
